Created using Popcode: https://popcode.org

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>04.2 DIVs Guided Practice</title>
+        <title>DIVs Guided Practice</title>
     </head>
     <body>
         <div class="headings">
