Created using Popcode: https://popcode.org

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html> <html><head>
-        <title>04.2 DIVs Guided Practice</title>
+        <title>DIVs Guided Practice</title>
     <style>body {
     font-family: arial;
 }
